# data.parquet

./: .gitignore  Cargo.toml  Makefile  README.md  azure-pipelines.yml  build.clj  deps.edn
src-java/berrysoft/data/: ParquetColumnIterator.java  ParquetColumnSeq.java  ParquetNative.java
src-java/data/: ParquetColumn.java  ParquetColumnIterator.java  ParquetNative.java
src-rust/: lib.rs
src/berrysoft/data/: parquet.clj
src/data/: parquet.clj
test/berrysoft/data/: hello_test.clj
test/berrysoft/data/parquet_test/: basic_test.clj  rand_test.clj  utils.clj
test/data/: basic_test.clj  hello_test.clj
test/data/parquet_test/: basic_test.clj  utils.clj
