[package]
name = "berrysoft-data-parquet-jni"
version = "0.1.0"
edition = "2021"

[lib]
path = "src-rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
arrow-array = "48"
arrow-buffer = "48"
arrow-schema = "48"
parquet = "48"
thiserror = "1"

[profile.release]
lto = true
codegen-units = 1
